--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,15 @@ buildscript {
     repositories {
         google()
         jcenter()
-        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
     }
 }
 
-
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
