--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-<<<<<<< HEAD
-#Thu Sep 13 15:56:25 PDT 2018
-=======
->>>>>>> 612f456b1020dac06adbc24b050e2a612fc6c756
+#Wed Oct 03 15:51:40 PDT 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+>>>>>>>=612f456b1020dac06adbc24b050e2a612fc6c756
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
