--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -11,6 +11,7 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 dependencies {
+    implementation project(':openCVLibrary343')
 }
 
 android { sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs'] } } }
