--- a/openCVLibrary343/build.gradle
+++ b/openCVLibrary343/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 23
     buildToolsVersion '28.0.2'
 
     defaultConfig {
-
-        minSdkVersion 28
+        minSdkVersion 8
+        targetSdkVersion 23
     }
 
     buildTypes {
