--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -7,10 +7,10 @@ android {
 
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 23
+        targetSdkVersion 28
     }
 
-    compileSdkVersion 23
+    compileSdkVersion 28
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -24,3 +24,7 @@ repositories {
 }
 
 apply from: 'build.release.gradle'
+
+dependencies {
+    implementation project(':openCVLibrary343')
+}
